test.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tenant-a
---
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: tenant-a
spec:
  containers:
  - name: nginx
    image: nginx:latest
